fix layout issues
Rearranged various weather information on grid and added HTML elements
for better organization.

--- a/src/assets/styles/weather.css
+++ b/src/assets/styles/weather.css
@@ -22,10 +22,10 @@
 }
 
 .left-side {
+  width: 33%;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(3, 1fr);
-  border: 2px dashed red;
+  grid-template-columns: 30% 30% 40%;
+  grid-template-rows: repeat(6, 1fr);
 }
 
 .right-side {
@@ -33,11 +33,72 @@
   align-items: center;
 }
 
+.moon {
+  width: 70%;
+}
+#temp-C,
+#hum-C,
+#precip-C,
+#moon-C,
+#press-C,
+#solar-C,
+#wind-C,
+#uv-C {
+  width: 90%;
+}
+
+#temp-C {
+  grid-row: 1 / 3;
+  grid-column: 3 / 4;
+}
+
+#solar-C {
+  grid-row: 3 / 5;
+  grid-column: 3 / 4;
+}
+
+#moon-C {
+  grid-row: 4 / 7;
+  grid-column: 3 / 4;
+  align-self: center;
+}
+
+#precip-C {
+  grid-row: 1 / 3;
+  grid-column: 2 / 3;
+  align-self: center;
+}
+
+#hum-C {
+  grid-row: 2 / 5;
+  grid-column: 2 / 3;
+  align-self: center;
+}
+
+#uv-C {
+  grid-row: 3 / 7;
+  grid-column: 2 / 3;
+  align-self: center;
+}
+
+#wind-C {
+  grid-row: 2 / 4;
+  grid-column: 1 / 2;
+  align-self: center;
+}
+
+#press-C {
+  grid-row: 3 / 6;
+  grid-column: 1 / 2;
+  align-self: center;
+}
+
 .container {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-self: center;
+  height: fit-content;
 }
 
 .larger-container {
@@ -70,7 +131,6 @@
   justify-content: center;
   align-items: center;
   flex: 1;
-  width: 100%;
 }
 
 .uniform {
@@ -104,7 +164,8 @@
 }
 
 .min-box,
-.max-box {
+.max-box,
+.el-box {
   height: 100%;
   flex: 1;
   display: flex;
@@ -124,6 +185,12 @@
   background-color: rgba(0, 0, 0, 0.15);
   border-top-right-radius: 10px;
   border-bottom-right-radius: 10px;
+  color: white;
+}
+
+.el-box {
+  border-radius: 10px;
+  background-color: rgba(0, 0, 0, 0.15);
   color: white;
 }
 
@@ -147,12 +214,10 @@
 }
 
 .static {
-  background-color: transparent;
 }
 
 .column {
   display: flex;
   flex-direction: column;
   align-items: center;
-  border: 2px dashed white;
 }
